--- a/2020.md
+++ b/2020.md
@@ -2,14 +2,19 @@
 
 | Paper Submission | Abstract Submission | Conference | Conference Homepage | When? | Where? | 
 | --- | --- | --- | --- | --- | --- | 
-| Mar 5, 2020 |  | FSE | <a href="https://2020.esec-fse.org/">28th ACM SIGSOFT International Symposium on the Foundations of Software Engineering</a> | Nov 8-13, 2020 | Sacramento, California, USA | 
-| January 23, 2020 |  | CAV | <a href="http://i-cav.org/2020/">32nd International Conference on Computer Aided Verification</a> | Jul 19-24, 2020 | Los Angeles, California, USA | 
-| Jan 27, 2020 |  | ISSTA | <a href="https://conf.researchr.org/home/issta-2020">International Symposium on Software Testing and Analysis</a> | Jul 18-22, 2020 | Los Angeles, California, USA | 
+| Apr 15, 2020 |  | SPLASH | <a href="https://2020.splashcon.org/">11th ACM SIGPLAN conference on Systems, Programming, Languages, and Applications: Software for Humanity</a> | Nov 15-20, 2020 | Chicago, IL, USA | 
+| Mar 5, 2020 |  | FSE | <a href="https://2020.esec-fse.org/">28th ACM SIGSOFT International Symposium on the Foundations of Software Engineering</a> | Nov 8-13, 2020 | Sacramento, CA, USA | 
+| Jan 31, 2020 | Jan 24, 2020 | ICS | <a href="https://ics2020.bsc.es/">34th ACM International Conference on Supercomputing</a> | Jun 29-Jul 2, 2020 | Barcelona, Spain | 
+| Jan 27, 2020 |  | ISSTA | <a href="https://conf.researchr.org/home/issta-2020">29th ACM SIGSOFT International Symposium on Software Testing and Analysis</a> | Jul 18-22, 2020 | Los Angeles, CA, USA | 
+| Jan 23, 2020 |  | CAV | <a href="http://i-cav.org/2020/">32nd International Conference on Computer Aided Verification</a> | Jul 19-24, 2020 | Los Angeles, CA, USA | 
+| Jan 23, 2020 | Jan 16, 2020 | IJCAR | <a href="https://ijcar2020.org">10th International Joint Conference on Automated Reasoning</a> | Jun 29-Jul 5, 2020 | Paris, France | 
+| Jan 12, 2020 | Jan 5, 2020 | TASE | <a href="http://www.se.gxnu.edu.cn/tase2019/">14th International Symposium on Theoretical Aspects of Software Engineering</a> | Jul 15-17, 2020 | Hangzhou, China | 
+| Jan 10, 2020 | Jan 6, 2020 | LICS | <a href="https://lics.siglog.org/lics20/">35th Annual IEEE Symposium on Logic in Computer Science</a> | Jul 8-12, 2020 | Beijing, China | 
 | Jan 10, 2020 |  | ECOOP | <a href="https://2020.ecoop.org/">34th European Conference on Object-Oriented Programming</a> | Jul 13-17, 2020 | Berlin, Germany | 
-| TBD | TBD | ICS | <a href="https://www.ics-conference.org/index.html">34rd International Conference on Supercomputing</a> | Jun 29-Jul 2, 2020 | Barcelona, Spain | 
+| Dec 19, 2019 | Dec 12, 2019 | NFM | <a href="https://ti.arc.nasa.gov/events/nfm-2020/">12th NASA Formal Methods Symposium</a> | May 11-15, 2020 | Moffett Field, CA, USA | 
 | Dec 13, 2020 | Dec 3, 2019 | DSN | <a href="http://www.dsn.org/">50th Annual IEEE/IFIP International Conference on Dependable Systems and Networks</a> | Jun 29-Jul 2, 2020 | Valencia, Spain | 
 | Nov 22, 2019 |  | PLDI | <a href="https://conf.researchr.org/home/pldi-2020">41st ACM SIGPLAN Conference on Programming Language Design and Implementation</a> | Jun 15-20, 2020 | London, United Kingdom | 
-| Nov 4, 2019 |  | EuroSys | <a href="https://www.eurosys2020.org/">European Conference on Computer Systems</a> | Apr 27-30, 2020 | Heraklion, Crete, Greece | 
+| Nov 4, 2019 |  | EuroSys | <a href="https://www.eurosys2020.org/">15th European Conference on Computer Systems</a> | Apr 27-30, 2020 | Heraklion, Crete, Greece | 
 |  |  | ETAPS | <a href="http://www.etaps.org/">The European Joint Conferences on Theory and Practice of Software</a> | Apr 25-30, 2020 | Dublin, Ireland | 
 | Oct 24, 2019 | | TACAS | <a href="https://www.etaps.org/2020/tacas">26th International Conference on Tools and Algorithms for the Construction and Analysis of Systems</a> | Apr 25-30, 2020 | Dublin, Ireland | 
 | Oct 24, 2019 |  | FASE | <a href="https://www.etaps.org/2020/fase">23rd International Conference on Fundamental Approaches to Software Engineering</a> | Apr 25-30, 2020 | Dublin, Ireland |
@@ -20,10 +25,7 @@
 | Oct 6, 2019 | Oct 1, 2019 | VMCAI | <a href="https://popl20.sigplan.org/home/VMCAI-2020">21st International Conference on Verification, Model Checking and Abstract Interpretation</a> | Jan 13-15, 2019 | New Orleans, LA, USA | 
 | Aug 23, 2019 |  | ICSE | <a href="http://conf.researchr.org/home/icse-2020">42nd International Conference on Software Engineering</a> | May 23-29, 2020 | Seoul, South Korea | 
 | August 6, 2019 | Jul 31, 2019 | PPoPP | <a href="https://ppopp20.sigplan.org/">25th ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming</a> | Feb 22-26, 2020 | San Diego, CA, USA | 
-| Jul 10, 2019 |  | POPL | <a href="https://popl20.sigplan.org/">47th Annual ACM SIGPLAN - SIGACT Symposium on Principles of Programming Languages</a> | Jan 19-25, 2020 | New Orleans, Louisiana, USA | 
-| Dec 19, 2019 | Dec 12, 2019 | NFM | <a href="https://ti.arc.nasa.gov/events/nfm-2020/">12th NASA Formal Methods Symposium</a> | May 11-15, 2020 | Moffett Field, CA, USA | 
-| Jan 12, 2020 | Jan 5, 2020 | TASE | <a href="http://www.se.gxnu.edu.cn/tase2019/">14th International Symposium on Theoretical Aspects of Software Engineering</a> | Jul 15-17, 2020 | Hangzhou, China | 
-| Jan 10, 2020 | Jan 6, 2020 | LICS | <a href="https://lics.siglog.org/lics20/">35th Annual IEEE Symposium on Logic in Computer Science</a> | Jul 8-12, 2020 | Beijing, China | 
+| Jul 10, 2019 |  | POPL | <a href="https://popl20.sigplan.org/">47th Annual ACM SIGPLAN - SIGACT Symposium on Principles of Programming Languages</a> | Jan 19-25, 2020 | New Orleans, LA, USA | 
 
 
 
@@ -55,9 +57,7 @@
 | Apr 12, 2019  | Apr 5, 2019  | EMSOFT | <a href="https://www.esweek.org/emsoft/about">International Conference on Embedded Software</a> | Oct 13-18, 2019 | New York City, New York, USA | 
 | Apr 11, 2019 | Mar 28, 2019 | FM | <a href="http://formalmethods2019.inesctec.pt/">23rd International Symposium on Formal Methods</a> | Oct 7-11, 2019 | Porto, Portugal | 
 | Apr 11, 2019 | Mar 28, 2019 | TAP | <a href="https://tap.sosy-lab.org/2019/">13th International Conference on Tests and Proofs</a> | Oct 9-11, 2019 | Porto, Portugal | 
-| Apr 5, 2019 |  | SPIN | <a href="https://conf.researchr.org/home/spin-2019">26th International SPIN Symposium on Model Checking Software</a> | Jul 15-19, 2019 | Beijing, China | 
-| Apr 5, 2019 |  | SPLASH | <a href="https://2019.splashcon.org">10th Annual Conference on Systems, Programming, Languages and Applications: Software for Humanity</a> | Oct 20-25, 2019 | Athens, Greece | 
-| Feb 22, 2019 | Feb 15, 2019 | CADE | <a href="http://cade-27.info/">27th International Conference on Automated Deduction</a> | Aug 27-30, 2019 | Natal, Brazil | 
+| Apr 5, 2019 |  | SPIN | <a href="https://conf.researchr.org/home/spin-2019">26th International SPIN Symposium on Model Checking Software</a> | Jul 15-19, 2019 | Beijing, China |            
 
 
 
