--- a/2020.md
+++ b/2020.md
@@ -2,12 +2,22 @@
 
 | Paper Submission | Abstract Submission | Conference | Conference Homepage | When? | Where? | 
 | --- | --- | --- | --- | --- | --- | 
+| May 25, 2020 |  | RV | <a href="https://rv20.ait.ac.at/">20th International Conference on Runtime Verification</a> | Oct 6-9, 2020 | Los Angeles, CA, USA | 
+| May 15, 2020 | May 8, 2020 | FMICS | <a href="https://fmics20.ait.ac.at/">25th International Conference on Formal Methods for Industrial Critical Systems</a> | Sep 2-3, 2020 | Vienna, Austria | 
+| May 12, 2020 | May 5, 2020 | OSDI | <a href="https://www.usenix.org/conference/osdi20">14th USENIX Symposium on Operating Systems Design and Implementation</a> | Nov 4-6, 2020 | Banff, Canada | 
+| May 7, 2020 | May 1, 2020 | ISSRE | <a href="http://www.wut-dscl.cn/issre/ISSRE2020.html">31st IEEE International Symposium on Software Reliability Engineering</a> | Oct 28-31, 2020 | Wuhan, China | 
+| May 4, 2020 | Apr 27, 2020 | SEFM | <a href="https://event.cwi.nl/sefm2020/">18th IEEE International Conference on Software Engineering and Formal Methods</a> | Sep 14-28, 2020 | Amsterdam, Netherlands | 
+| May 3, 2020 | Apr 26, 2020 | ATVA | <a href="http://fit.uet.vnu.edu.vn/atva2020/">18th International Symposium on Automated Technology for Verification and Analysis</a> | Oct 19-23, 2020 | Hanoi, Vietnam | 
+| Apr 22, 2020 | Apr 15, 2020 | CONCUR | <a href="https://concur2020.forsyte.at/">31st International Conference on Concurrency Theory</a> | Sep 1-4, 2020 | Vienna, Austria | 
+| Apr 17, 2020 | Apr 10, 2020 | ASE | <a href="https://a2i2.github.io/ase2020/">35th IEEE/ACM International Conference on Automated Software Engineering</a> | Sep 21-25, 2020 | Melbourne, Australia | 
 | Apr 15, 2020 |  | SPLASH | <a href="https://2020.splashcon.org/">11th ACM SIGPLAN conference on Systems, Programming, Languages, and Applications: Software for Humanity</a> | Nov 15-20, 2020 | Chicago, IL, USA | 
+| Apr 10, 2020 | Apr 3, 2020 | EMSOFT | <a href="https://www.esweek.org/emsoft/about">International Conference on Embedded Software</a> | Oct 11-16, 2020 | Shanghai, China | 
 | Mar 5, 2020 |  | FSE | <a href="https://2020.esec-fse.org/">28th ACM SIGSOFT International Symposium on the Foundations of Software Engineering</a> | Nov 8-13, 2020 | Sacramento, CA, USA | 
 | Jan 31, 2020 | Jan 24, 2020 | ICS | <a href="https://ics2020.bsc.es/">34th ACM International Conference on Supercomputing</a> | Jun 29-Jul 2, 2020 | Barcelona, Spain | 
 | Jan 27, 2020 |  | ISSTA | <a href="https://conf.researchr.org/home/issta-2020">29th ACM SIGSOFT International Symposium on Software Testing and Analysis</a> | Jul 18-22, 2020 | Los Angeles, CA, USA | 
 | Jan 23, 2020 |  | CAV | <a href="http://i-cav.org/2020/">32nd International Conference on Computer Aided Verification</a> | Jul 19-24, 2020 | Los Angeles, CA, USA | 
 | Jan 23, 2020 | Jan 16, 2020 | IJCAR | <a href="https://ijcar2020.org">10th International Joint Conference on Automated Reasoning</a> | Jun 29-Jul 5, 2020 | Paris, France | 
+| Jan 22, 2020 | Jan 15, 2020 | TAP | <a href="https://tap.sosy-lab.org/2020/">14th International Conference on Tests and Proofs</a> | Jun 22-26, 2020 | Bergen, Norway | 
 | Jan 12, 2020 | Jan 5, 2020 | TASE | <a href="http://www.se.gxnu.edu.cn/tase2019/">14th International Symposium on Theoretical Aspects of Software Engineering</a> | Jul 15-17, 2020 | Hangzhou, China | 
 | Jan 10, 2020 | Jan 6, 2020 | LICS | <a href="https://lics.siglog.org/lics20/">35th Annual IEEE Symposium on Logic in Computer Science</a> | Jul 8-12, 2020 | Beijing, China | 
 | Jan 10, 2020 |  | ECOOP | <a href="https://2020.ecoop.org/">34th European Conference on Object-Oriented Programming</a> | Jul 13-17, 2020 | Berlin, Germany | 
@@ -17,7 +27,7 @@
 | Nov 4, 2019 |  | EuroSys | <a href="https://www.eurosys2020.org/">15th European Conference on Computer Systems</a> | Apr 27-30, 2020 | Heraklion, Crete, Greece | 
 |  |  | ETAPS | <a href="http://www.etaps.org/">The European Joint Conferences on Theory and Practice of Software</a> | Apr 25-30, 2020 | Dublin, Ireland | 
 | Oct 24, 2019 | | TACAS | <a href="https://www.etaps.org/2020/tacas">26th International Conference on Tools and Algorithms for the Construction and Analysis of Systems</a> | Apr 25-30, 2020 | Dublin, Ireland | 
-| Oct 24, 2019 |  | FASE | <a href="https://www.etaps.org/2020/fase">23rd International Conference on Fundamental Approaches to Software Engineering</a> | Apr 25-30, 2020 | Dublin, Ireland |
+| Oct 24, 2019 |  | FASE | <a href="https://www.etaps.org/2020/fase">23rd International Conference on Fundamental Approaches to Software Engineering</a> | Apr 25-30, 2020 | Dublin, Ireland | 
 | Oct 24, 2019 |  | FoSSaCS | <a href="https://www.etaps.org/2020/fossacs">23rd International Conference on Foundations of Software Science and Computation Structures</a> | 25-30 April 25-30, 2020 | Dublin, Ireland | 
 | Oct 24, 2019 |  | ESOP | <a href="https://www.etaps.org/2020/esop"> 29th European Symposium on Programming</a> | Apr 25-30, 2020 | Dublin, Ireland | 
 | Oct 18, 2019 | | ISEC | <a href="https://isoft.acm.org/isec2020/">13th Innovations in Software Engineering Conference</a> | Feb 27-29, 2020 | Jabalpour, M.P, India | 
@@ -41,25 +51,15 @@
 | Jun 2, 2019 | May 26, 2019 | AVOCS | <a href="http://avocs19.imag.fr/">19th International Workshop on Automated Verification of Critical Systems</a> | Sep 30-Oct 1, 2019 | Grenoble, France | 
 | May 21, 2019 | May 14, 2019 | ICFEM | <a href="http://csse.szu.edu.cn/icfem2019/">21st International Conference on Formal Engineering Methods</a> | Nov 5-9, 2019 | Shenzhen, China | 
 | May 17, 2019 | May 10, 2019 | FMCAD | <a href="https://fmcad.forsyte.at/FMCAD19/">19th International Conference on Formal Methods in Computer-Aided Design</a> | Oct 22 - 25, 2019 | San Jose, California, USA | 
-| May 13, 2019 | May 6, 2019 | ASE | <a href="https://2019.ase-conferences.org/">34th IEEE/ACM International Conference on Automated Software Engineering</a> | Nov 11-15, 2019 | San Diego, California, USA | 
 | May 12, 2019 | May 5, 2019 | ICTAC | <a href="http://ictac2019.redcad.org/">16th International Colloquium on Theoretical Aspects of Computing</a> | Oct 30-Nov 4, 2019 | Hammamet, Tunisia | 
-| May 10, 2019 | May 3, 2019 | SEFM | <a href="https://sefm2019.inria.fr/">17th IEEE International Conference on Software Engineering and Formal Methods</a> | Sep 16-20, 2019 | Oslo, Norway | 
-| May 5, 2019 | Apr 28, 2019 | ISSRE | <a href="http://www.issre.net/">30th IEEE International Symposium on Software Reliability Engineering</a> | Oct 28-Nov 1, 2019 | Berlin, Germany | 
-| May 3, 2019 | Apr 26, 2019 | ATVA | <a href="http://atva2019.iis.sinica.edu.tw/">17th International Symposium on Automated Technology for Verification and Analysis</a> | Oct 28-31, 2019 | Taipei City, Taiwan | 
-| Apr 30, 2019 |  | RV | <a href="https://www.react.uni-saarland.de/rv2019/">19th International Conference on Runtime Verification</a> | Oct 8-11, 2019 | Porto, Portugal | 
 | Apr 29, 2019 | Apr 23, 2019 | VSTTE | <a href="https://sri-csl.github.io/VSTTE19/">11th Working Conference on Verified Software: Theories, Tools, and Experiments</a> | Jul 13-14, 2019 | New York City, New York, USA | 
-| Apr 26, 2019 | Apr 19, 2019 | FMICS | <a href="https://fmics2019.fsa.win.tue.nl">24th International Conference on Formal Methods for Industrial Critical Systems</a> | Aug 30-31, 2019 | Amsterdam, Netherlands | 
 | Apr 26, 2019 | Apr 19, 2019 | SMT | <a href="http://smt2019.galois.com/">17th International Workshop on Satisfiability Modulo Theories</a> | Jul 7-8, 2019 | Lisbon, Portugal | 
 | Apr 24, 2019 | Apr 21, 2019 | FORMATS | <a href="https://lipn.univ-paris13.fr/formats2019/">17th International Conference on Formal Modeling and Analysis of Timed Systems</a> | Aug 26-31, 2019 | Amsterdam, Netherlands | 
 | Apr 24, 2019 | Apr 17, 2019 | SOSP | <a href="https://www.sigops.org/sosp/sosp19/">27th ACM Symposium on Operating Systems Principles</a> | Oct 7-9, 2019 | Huntsville, Canada | 
-| Apr 22, 2019 | Apr 15, 2019 | CONCUR | <a href="https://event.cwi.nl/concur2019/">30th International Conference on Concurrency Theory</a> | Aug 26-31, 2019 | Amsterdam, Netherlands | 
 | Apr 18, 2019 |  | SAS | <a href="http://staticanalysis.org/sas2019/">26th International Static Analysis Symposium</a> | Oct 8-11, 2019 | Porto, Portugal | 
-| Apr 12, 2019  | Apr 5, 2019  | EMSOFT | <a href="https://www.esweek.org/emsoft/about">International Conference on Embedded Software</a> | Oct 13-18, 2019 | New York City, New York, USA | 
 | Apr 11, 2019 | Mar 28, 2019 | FM | <a href="http://formalmethods2019.inesctec.pt/">23rd International Symposium on Formal Methods</a> | Oct 7-11, 2019 | Porto, Portugal | 
-| Apr 11, 2019 | Mar 28, 2019 | TAP | <a href="https://tap.sosy-lab.org/2019/">13th International Conference on Tests and Proofs</a> | Oct 9-11, 2019 | Porto, Portugal | 
-| Apr 5, 2019 |  | SPIN | <a href="https://conf.researchr.org/home/spin-2019">26th International SPIN Symposium on Model Checking Software</a> | Jul 15-19, 2019 | Beijing, China |            
-
-
+| Apr 5, 2019 |  | SPIN | <a href="https://conf.researchr.org/home/spin-2019">26th International SPIN Symposium on Model Checking Software</a> | Jul 15-19, 2019 | Beijing, China | 
+| Feb 22, 2019 | Feb 15, 2019 | CADE | <a href="http://cade-27.info/">27th International Conference on Automated Deduction</a> | Aug 27-30, 2019 | Natal, Brazil | 
 
 
 
@@ -68,10 +68,6 @@
 
 | Aug 13, 2018 | Aug 6, 2018 | LPAR | <a href="https://easychair.org/smart-program/LPAR-22/">22nd International Conference on Logic for Programming, Artificial Intelligence and Reasoning</a> | Nov 16-21, 2018 | Awassa, Ethiopia | 
 | Jul 20, 2018 |  | SBMF | <a href="http://www.sbmf2018.ufba.br/">21st Brazilian Symposium on Formal Methods</a> | Nov 28-30, 2018 | Salvador, Brazil | 
-| May 3, 2018 | Apr 26, 2018 | OSDI | <a href="https://www.usenix.org/conference/osdi18">13th USENIX Symposium on Operating Systems Design and Implementation</a> | Oct 8-10, 2018 | Carlsbad, California, USA | 
-| Jan 29, 2018 | Jan 22, 2018 | IJCAR | <a href="http://ijcar2018.org/">9th International Joint Conference on Automated Reasoning</a> | Jul 14-17, 2018 | Oxford, UK | 
-| May 21, 2017 | May 14, 2017 | FMICS-AVoCS | <a href="http://www.es.mdh.se/conferences/fmics-avocs-2017/">International Workshop on Formal Methods for Industrial Critical Systems and Automated Verification of Critical Systems</a> | Sep 18-20, 2017 | Torino, Italy | 
-| Apr 1, 2014 |  | SSV | <a href="http://www.ssv-conference.org/">8th International Workshop on Systems Software Verification</a> | Jul 23-24, 2014 | Vienna, Austria | 
 
 -->
 
