--- a/2020.md
+++ b/2020.md
@@ -13,6 +13,7 @@
 | Apr 15, 2020 |  | SPLASH | <a href="https://2020.splashcon.org/">11th ACM SIGPLAN conference on Systems, Programming, Languages, and Applications: Software for Humanity</a> | Nov 15-20, 2020 | Chicago, IL, USA | 
 | Apr 10, 2020 | Apr 3, 2020 | EMSOFT | <a href="https://www.esweek.org/emsoft/about">International Conference on Embedded Software</a> | Oct 11-16, 2020 | Shanghai, China | 
 | Mar 5, 2020 |  | FSE | <a href="https://2020.esec-fse.org/">28th ACM SIGSOFT International Symposium on the Foundations of Software Engineering</a> | Nov 8-13, 2020 | Sacramento, CA, USA | 
+| Feb 15, 2020 |  | LPAR | <a href="https://easychair.org/smart-program/LPAR-23/">23rd International Conference on Logic for Programming, Artificial Intelligence and Reasoning</a> | May 22-27, 2020 | Alicante, Spain | 
 | Jan 31, 2020 | Jan 24, 2020 | ICS | <a href="https://ics2020.bsc.es/">34th ACM International Conference on Supercomputing</a> | Jun 29-Jul 2, 2020 | Barcelona, Spain | 
 | Jan 27, 2020 |  | ISSTA | <a href="https://conf.researchr.org/home/issta-2020">29th ACM SIGSOFT International Symposium on Software Testing and Analysis</a> | Jul 18-22, 2020 | Los Angeles, CA, USA | 
 | Jan 23, 2020 |  | CAV | <a href="http://i-cav.org/2020/">32nd International Conference on Computer Aided Verification</a> | Jul 19-24, 2020 | Los Angeles, CA, USA | 
@@ -66,7 +67,6 @@
 
 2018 TODOs
 
-| Aug 13, 2018 | Aug 6, 2018 | LPAR | <a href="https://easychair.org/smart-program/LPAR-22/">22nd International Conference on Logic for Programming, Artificial Intelligence and Reasoning</a> | Nov 16-21, 2018 | Awassa, Ethiopia | 
 | Jul 20, 2018 |  | SBMF | <a href="http://www.sbmf2018.ufba.br/">21st Brazilian Symposium on Formal Methods</a> | Nov 28-30, 2018 | Salvador, Brazil | 
 
 -->
