Updated SAS conference

--- a/2020.md
+++ b/2020.md
@@ -8,6 +8,7 @@
 | May 7, 2020 | May 1, 2020 | ISSRE | <a href="http://www.wut-dscl.cn/issre/ISSRE2020.html">31st IEEE International Symposium on Software Reliability Engineering</a> | Oct 28-31, 2020 | Wuhan, China | 
 | May 4, 2020 | Apr 27, 2020 | SEFM | <a href="https://event.cwi.nl/sefm2020/">18th IEEE International Conference on Software Engineering and Formal Methods</a> | Sep 14-28, 2020 | Amsterdam, Netherlands | 
 | May 3, 2020 | Apr 26, 2020 | ATVA | <a href="http://fit.uet.vnu.edu.vn/atva2020/">18th International Symposium on Automated Technology for Verification and Analysis</a> | Oct 19-23, 2020 | Hanoi, Vietnam | 
+| Apr 24, 2020 | Apr 22, 2020 | SAS | <a href="https://conf.researchr.org/home/sas-2020">27th International Static Analysis Symposium</a> | Nov 18-20, 2020 | Chicago, IL, USA | 
 | Apr 22, 2020 | Apr 15, 2020 | CONCUR | <a href="https://concur2020.forsyte.at/">31st International Conference on Concurrency Theory</a> | Sep 1-4, 2020 | Vienna, Austria | 
 | Apr 17, 2020 | Apr 10, 2020 | ASE | <a href="https://a2i2.github.io/ase2020/">35th IEEE/ACM International Conference on Automated Software Engineering</a> | Sep 21-25, 2020 | Melbourne, Australia | 
 | Apr 15, 2020 |  | SPLASH | <a href="https://2020.splashcon.org/">11th ACM SIGPLAN conference on Systems, Programming, Languages, and Applications: Software for Humanity</a> | Nov 15-20, 2020 | Chicago, IL, USA | 
@@ -57,7 +58,6 @@
 | Apr 26, 2019 | Apr 19, 2019 | SMT | <a href="http://smt2019.galois.com/">17th International Workshop on Satisfiability Modulo Theories</a> | Jul 7-8, 2019 | Lisbon, Portugal | 
 | Apr 24, 2019 | Apr 21, 2019 | FORMATS | <a href="https://lipn.univ-paris13.fr/formats2019/">17th International Conference on Formal Modeling and Analysis of Timed Systems</a> | Aug 26-31, 2019 | Amsterdam, Netherlands | 
 | Apr 24, 2019 | Apr 17, 2019 | SOSP | <a href="https://www.sigops.org/sosp/sosp19/">27th ACM Symposium on Operating Systems Principles</a> | Oct 7-9, 2019 | Huntsville, Canada | 
-| Apr 18, 2019 |  | SAS | <a href="http://staticanalysis.org/sas2019/">26th International Static Analysis Symposium</a> | Oct 8-11, 2019 | Porto, Portugal | 
 | Apr 11, 2019 | Mar 28, 2019 | FM | <a href="http://formalmethods2019.inesctec.pt/">23rd International Symposium on Formal Methods</a> | Oct 7-11, 2019 | Porto, Portugal | 
 | Apr 5, 2019 |  | SPIN | <a href="https://conf.researchr.org/home/spin-2019">26th International SPIN Symposium on Model Checking Software</a> | Jul 15-19, 2019 | Beijing, China | 
 | Feb 22, 2019 | Feb 15, 2019 | CADE | <a href="http://cade-27.info/">27th International Conference on Automated Deduction</a> | Aug 27-30, 2019 | Natal, Brazil | 
