--- a/2020.md
+++ b/2020.md
@@ -8,9 +8,12 @@
 | May 7, 2020 | May 1, 2020 | ISSRE | <a href="http://www.wut-dscl.cn/issre/ISSRE2020.html">31st IEEE International Symposium on Software Reliability Engineering</a> | Oct 28-31, 2020 | Wuhan, China | 
 | May 4, 2020 | Apr 27, 2020 | SEFM | <a href="https://event.cwi.nl/sefm2020">18th IEEE International Conference on Software Engineering and Formal Methods</a> | Sep 14-28, 2020 | Amsterdam, Netherlands | 
 | May 3, 2020 | Apr 26, 2020 | ATVA | <a href="http://fit.uet.vnu.edu.vn/atva2020">18th International Symposium on Automated Technology for Verification and Analysis</a> | Oct 19-23, 2020 | Hanoi, Vietnam | 
+| May 1, 2020 |  | ICFEM | <a href="https://formal-analysis.com/icfem/2020">22nd International Conference on Formal Engineering Methods</a> | Nov 2-6, 2020 | Singapore | 
 | Apr 24, 2020 | Apr 22, 2020 | SAS | <a href="https://conf.researchr.org/home/sas-2020">27th International Static Analysis Symposium</a> | Nov 18-20, 2020 | Chicago, IL, USA | 
 | Apr 22, 2020 | Apr 15, 2020 | CONCUR | <a href="https://concur2020.forsyte.at">31st International Conference on Concurrency Theory</a> | Sep 1-4, 2020 | Vienna, Austria | 
+| Apr 20, 2020 | Apr 14, 2020 | VSTTE | <a href="https://sri-csl.github.io/VSTTE20">12th Working Conference on Verified Software: Theories, Tools, and Experiments</a> | Jul 19-20, 2020 | Los Angeles, CA, USA | 
 | Apr 17, 2020 | Apr 10, 2020 | ASE | <a href="https://a2i2.github.io/ase2020">35th IEEE/ACM International Conference on Automated Software Engineering</a> | Sep 21-25, 2020 | Melbourne, Australia | 
+| Apr 16, 2020 | Apr 9, 2020 | FMCAD | <a href="https://fmcad.forsyte.at/FMCAD20">20th International Conference on Formal Methods in Computer-Aided Design</a> | Sep 22 - 24, 2020 | Haifa, Israel | 
 | Apr 15, 2020 |  | SPLASH | <a href="https://2020.splashcon.org">11th ACM SIGPLAN conference on Systems, Programming, Languages, and Applications: Software for Humanity</a> | Nov 15-20, 2020 | Chicago, IL, USA | 
 | Apr 10, 2020 | Apr 3, 2020 | EMSOFT | <a href="https://www.esweek.org/emsoft/about">International Conference on Embedded Software</a> | Oct 11-16, 2020 | Shanghai, China | 
 | Mar 5, 2020 |  | FSE | <a href="https://2020.esec-fse.org">28th ACM SIGSOFT International Symposium on the Foundations of Software Engineering</a> | Nov 8-13, 2020 | Sacramento, CA, USA | 
@@ -52,10 +55,7 @@
 | Jun 21, 2019 |  | SETTA | <a href="http://www4.comp.polyu.edu.hk/~csguannan/setta19/">5th International Symposium on Dependable Software Engineering: Theories, Tools and Applications</a> | Nov 27-29, 2019 | Shanghai, China | 
 | Jun 14, 2019 | Jun 11, 2019 | APLAS | <a href="https://conf.researchr.org/home/aplas-2019/">17th Asian Symposium on Programming Languages and Systems</a> | Dec 2-4, 2019 | Bali, Indonesia | 
 | Jun 2, 2019 | May 26, 2019 | AVOCS | <a href="http://avocs19.imag.fr/">19th International Workshop on Automated Verification of Critical Systems</a> | Sep 30-Oct 1, 2019 | Grenoble, France | 
-| May 21, 2019 | May 14, 2019 | ICFEM | <a href="http://csse.szu.edu.cn/icfem2019/">21st International Conference on Formal Engineering Methods</a> | Nov 5-9, 2019 | Shenzhen, China | 
-| May 17, 2019 | May 10, 2019 | FMCAD | <a href="https://fmcad.forsyte.at/FMCAD19/">19th International Conference on Formal Methods in Computer-Aided Design</a> | Oct 22 - 25, 2019 | San Jose, California, USA | 
 | May 12, 2019 | May 5, 2019 | ICTAC | <a href="http://ictac2019.redcad.org/">16th International Colloquium on Theoretical Aspects of Computing</a> | Oct 30-Nov 4, 2019 | Hammamet, Tunisia | 
-| Apr 29, 2019 | Apr 23, 2019 | VSTTE | <a href="https://sri-csl.github.io/VSTTE19/">11th Working Conference on Verified Software: Theories, Tools, and Experiments</a> | Jul 13-14, 2019 | New York City, New York, USA | 
 | Apr 26, 2019 | Apr 19, 2019 | SMT | <a href="http://smt2019.galois.com/">17th International Workshop on Satisfiability Modulo Theories</a> | Jul 7-8, 2019 | Lisbon, Portugal | 
 | Apr 24, 2019 | Apr 21, 2019 | FORMATS | <a href="https://lipn.univ-paris13.fr/formats2019/">17th International Conference on Formal Modeling and Analysis of Timed Systems</a> | Aug 26-31, 2019 | Amsterdam, Netherlands | 
 | Apr 24, 2019 | Apr 17, 2019 | SOSP | <a href="https://www.sigops.org/sosp/sosp19/">27th ACM Symposium on Operating Systems Principles</a> | Oct 7-9, 2019 | Huntsville, Canada | 
