--- a/2020.md
+++ b/2020.md
@@ -2,6 +2,7 @@
 
 | Paper Submission | Abstract Submission | Conference | Conference Homepage | When? | Where? | 
 | --- | --- | --- | --- | --- | --- | 
+| Jun 26, 2020 | Jun 22, 2020 | ICTAC | <a href="https://ictac2020.github.io">17th International Colloquium on Theoretical Aspects of Computing</a> | Nov 30-Dec 4, 2020 | Macau, China | 
 | May 25, 2020 |  | RV | <a href="https://rv20.ait.ac.at">20th International Conference on Runtime Verification</a> | Oct 6-9, 2020 | Los Angeles, California, USA | 
 | May 15, 2020 | May 8, 2020 | FMICS | <a href="https://fmics20.ait.ac.at">25th International Conference on Formal Methods for Industrial Critical Systems</a> | Sep 2-3, 2020 | Vienna, Austria | 
 | May 12, 2020 | May 5, 2020 | OSDI | <a href="https://www.usenix.org/conference/osdi20">14th USENIX Symposium on Operating Systems Design and Implementation</a> | Nov 4-6, 2020 | Banff, Canada | 
@@ -56,7 +57,6 @@
 | Jun 21, 2019 |  | SETTA | <a href="http://www4.comp.polyu.edu.hk/~csguannan/setta19/">5th International Symposium on Dependable Software Engineering: Theories, Tools and Applications</a> | Nov 27-29, 2019 | Shanghai, China | 
 | Jun 14, 2019 | Jun 11, 2019 | APLAS | <a href="https://conf.researchr.org/home/aplas-2019/">17th Asian Symposium on Programming Languages and Systems</a> | Dec 2-4, 2019 | Bali, Indonesia | 
 | Jun 2, 2019 | May 26, 2019 | AVOCS | <a href="http://avocs19.imag.fr/">19th International Workshop on Automated Verification of Critical Systems</a> | Sep 30-Oct 1, 2019 | Grenoble, France | 
-| May 12, 2019 | May 5, 2019 | ICTAC | <a href="http://ictac2019.redcad.org/">16th International Colloquium on Theoretical Aspects of Computing</a> | Oct 30-Nov 4, 2019 | Hammamet, Tunisia | 
 | Apr 26, 2019 | Apr 19, 2019 | SMT | <a href="http://smt2019.galois.com/">17th International Workshop on Satisfiability Modulo Theories</a> | Jul 7-8, 2019 | Lisbon, Portugal | 
 | Apr 24, 2019 | Apr 21, 2019 | FORMATS | <a href="https://lipn.univ-paris13.fr/formats2019/">17th International Conference on Formal Modeling and Analysis of Timed Systems</a> | Aug 26-31, 2019 | Amsterdam, Netherlands | 
 | Apr 24, 2019 | Apr 17, 2019 | SOSP | <a href="https://www.sigops.org/sosp/sosp19/">27th ACM Symposium on Operating Systems Principles</a> | Oct 7-9, 2019 | Huntsville, Canada | 
