--- a/2020.md
+++ b/2020.md
@@ -2,11 +2,17 @@
 
 | Paper Submission | Abstract Submission | Conference | Conference Homepage | When? | Where? | 
 | --- | --- | --- | --- | --- | --- | 
+| Jul 18, 2020 |  | PRDC | <a href="http://prdc.dependability.org/PRDC2020/">25th IEEE Pacific Rim International Symposium on Dependable Computing</a> | Dec 1-4, 2020 | Perth, Australia | 
+| Jul 17, 2020 | Jul 10, 2020 | SBMF | <a href="http://sbmf2020.ufop.br/">23rd Brazilian Symposium on Formal Methods</a> | Nov 25-27, 2020 | Ouro Preto, Brazil | 
+| Jul 4, 2020 |  | SETTA | <a href="http://lcs.ios.ac.cn/setta2020/">6th International Symposium on Dependable Software Engineering: Theories, Tools and Applications</a> | Nov 24-27, 2020 | Guangzhou, China | 
 | Jun 26, 2020 | Jun 22, 2020 | ICTAC | <a href="https://ictac2020.github.io">17th International Colloquium on Theoretical Aspects of Computing</a> | Nov 30-Dec 4, 2020 | Macau, China | 
+| Jun 22, 2020 | Jun 15, 2020 | IFM | <a href="https://ifm20.si.usi.ch/">16th International Conference on integrated Formal Methods</a> | Nov 16-20, 2020 | Lugano, Switzerland | 
 | May 25, 2020 |  | RV | <a href="https://rv20.ait.ac.at">20th International Conference on Runtime Verification</a> | Oct 6-9, 2020 | Los Angeles, California, USA | 
+| May 17, 2020 | May 10, 2020 | SMT | <a href="http://smt-workshop.cs.uiowa.edu/2020/index.shtml">18th International Workshop on Satisfiability Modulo Theories</a> | Jul 5-6, 2020 | Paris, France | 
 | May 15, 2020 | May 8, 2020 | FMICS | <a href="https://fmics20.ait.ac.at">25th International Conference on Formal Methods for Industrial Critical Systems</a> | Sep 2-3, 2020 | Vienna, Austria | 
 | May 12, 2020 | May 5, 2020 | OSDI | <a href="https://www.usenix.org/conference/osdi20">14th USENIX Symposium on Operating Systems Design and Implementation</a> | Nov 4-6, 2020 | Banff, Canada | 
 | May 7, 2020 | May 1, 2020 | ISSRE | <a href="http://www.wut-dscl.cn/issre/ISSRE2020.html">31st IEEE International Symposium on Software Reliability Engineering</a> | Oct 28-31, 2020 | Wuhan, China | 
+| May 7, 2020 | Apr 28, 2020 | FORMATS | <a href="https://formats-2020.cs.ru.nl/">18th International Conference on Formal Modeling and Analysis of Timed Systems</a> | Sep 1-3, 2020 | Vienna, Austria | 
 | May 4, 2020 | Apr 27, 2020 | SEFM | <a href="https://event.cwi.nl/sefm2020">18th IEEE International Conference on Software Engineering and Formal Methods</a> | Sep 14-28, 2020 | Amsterdam, Netherlands | 
 | May 3, 2020 | Apr 26, 2020 | ATVA | <a href="http://fit.uet.vnu.edu.vn/atva2020">18th International Symposium on Automated Technology for Verification and Analysis</a> | Oct 19-23, 2020 | Hanoi, Vietnam | 
 | May 1, 2020 |  | ICFEM | <a href="https://formal-analysis.com/icfem/2020">22nd International Conference on Formal Engineering Methods</a> | Nov 2-6, 2020 | Singapore | 
@@ -52,23 +58,11 @@
 
 2019 TODOs
 
-| Jul 15, 2019 |  | PRDC | <a href="http://prdc.dependability.org/PRDC2019/">24th IEEE Pacific Rim International Symposium on Dependable Computing</a> | Dec 1-3, 2019 | Kyoto, Japan | 
-| Jun 28, 2019 | Jun 24, 2019 | IFM | <a href="http://ifm2019.hvl.no/">15th International Conference on integrated Formal Methods</a> | Dec 2-6, 2019 | Bergen, Norway | 
-| Jun 21, 2019 |  | SETTA | <a href="http://www4.comp.polyu.edu.hk/~csguannan/setta19/">5th International Symposium on Dependable Software Engineering: Theories, Tools and Applications</a> | Nov 27-29, 2019 | Shanghai, China | 
 | Jun 14, 2019 | Jun 11, 2019 | APLAS | <a href="https://conf.researchr.org/home/aplas-2019/">17th Asian Symposium on Programming Languages and Systems</a> | Dec 2-4, 2019 | Bali, Indonesia | 
 | Jun 2, 2019 | May 26, 2019 | AVOCS | <a href="http://avocs19.imag.fr/">19th International Workshop on Automated Verification of Critical Systems</a> | Sep 30-Oct 1, 2019 | Grenoble, France | 
-| Apr 26, 2019 | Apr 19, 2019 | SMT | <a href="http://smt2019.galois.com/">17th International Workshop on Satisfiability Modulo Theories</a> | Jul 7-8, 2019 | Lisbon, Portugal | 
-| Apr 24, 2019 | Apr 21, 2019 | FORMATS | <a href="https://lipn.univ-paris13.fr/formats2019/">17th International Conference on Formal Modeling and Analysis of Timed Systems</a> | Aug 26-31, 2019 | Amsterdam, Netherlands | 
 | Apr 24, 2019 | Apr 17, 2019 | SOSP | <a href="https://www.sigops.org/sosp/sosp19/">27th ACM Symposium on Operating Systems Principles</a> | Oct 7-9, 2019 | Huntsville, Canada | 
 | Apr 11, 2019 | Mar 28, 2019 | FM | <a href="http://formalmethods2019.inesctec.pt/">23rd International Symposium on Formal Methods</a> | Oct 7-11, 2019 | Porto, Portugal | 
 | Feb 22, 2019 | Feb 15, 2019 | CADE | <a href="http://cade-27.info/">27th International Conference on Automated Deduction</a> | Aug 27-30, 2019 | Natal, Brazil | 
-
-
-
-
-2018 TODOs
-
-| Jul 20, 2018 |  | SBMF | <a href="http://www.sbmf2018.ufba.br/">21st Brazilian Symposium on Formal Methods</a> | Nov 28-30, 2018 | Salvador, Brazil | 
 
 -->
 
