--- a/2021.md
+++ b/2021.md
@@ -2,6 +2,11 @@
 
 | Paper Submission | Abstract Submission | Conference | Conference Homepage | When? | Where? | 
 | --- | --- | --- | --- | --- | --- | 
+|  |  | ETAPS | <a href="http://www.etaps.org">The European Joint Conferences on Theory and Practice of Software</a> | Mar 27-Apr 1, 2021 | Luxembourg, Luxembourg | 
+| Oct 15, 2020 | | TACAS | <a href="https://www.etaps.org/2021/tacas">27th International Conference on Tools and Algorithms for the Construction and Analysis of Systems</a> | Mar 27-Apr 1, 2021 | Luxembourg, Luxembourg | 
+| Oct 15, 2020 |  | FASE | <a href="https://www.etaps.org/2021/fase">24th International Conference on Fundamental Approaches to Software Engineering</a> | Mar 27-Apr 1, 2021 | Luxembourg, Luxembourg | 
+| Oct 15, 2020 |  | FoSSaCS | <a href="https://www.etaps.org/2021/fossacs">24th International Conference on Foundations of Software Science and Computation Structures</a> | Mar 27-Apr 1, 2021 | Luxembourg, Luxembourg | 
+| Oct 15, 2020 |  | ESOP | <a href="https://www.etaps.org/2021/esop">30th European Symposium on Programming</a> | Mar 27-Apr 1, 2021 | Luxembourg, Luxembourg | 
 | Aug 28, 2020 |  | ICSE | <a href="http://conf.researchr.org/home/icse-2021">43rd International Conference on Software Engineering</a> | May 23-29, 2021 | Madrid, Spain | 
 | Jul 9, 2020 |  | POPL | <a href="https://popl21.sigplan.org">48th Annual ACM SIGPLAN - SIGACT Symposium on Principles of Programming Languages</a> | Jan 17-22, 2021 | Copenhagen, Denmark | 
 
@@ -47,11 +52,6 @@
 | Dec 13, 2020 | Dec 3, 2019 | DSN | <a href="http://www.dsn.org">50th Annual IEEE/IFIP International Conference on Dependable Systems and Networks</a> | Jun 29-Jul 2, 2020 | Valencia, Spain | 
 | Nov 22, 2019 |  | PLDI | <a href="https://conf.researchr.org/home/pldi-2020">41st ACM SIGPLAN Conference on Programming Language Design and Implementation</a> | Jun 15-20, 2020 | London, United Kingdom | 
 | Nov 4, 2019 |  | EuroSys | <a href="https://www.eurosys2020.org">15th European Conference on Computer Systems</a> | Apr 27-30, 2020 | Heraklion, Crete, Greece | 
-|  |  | ETAPS | <a href="http://www.etaps.org">The European Joint Conferences on Theory and Practice of Software</a> | Apr 25-30, 2020 | Dublin, Ireland | 
-| Oct 24, 2019 | | TACAS | <a href="https://www.etaps.org/2020/tacas">26th International Conference on Tools and Algorithms for the Construction and Analysis of Systems</a> | Apr 25-30, 2020 | Dublin, Ireland | 
-| Oct 24, 2019 |  | FASE | <a href="https://www.etaps.org/2020/fase">23rd International Conference on Fundamental Approaches to Software Engineering</a> | Apr 25-30, 2020 | Dublin, Ireland | 
-| Oct 24, 2019 |  | FoSSaCS | <a href="https://www.etaps.org/2020/fossacs">23rd International Conference on Foundations of Software Science and Computation Structures</a> | 25-30 April 25-30, 2020 | Dublin, Ireland | 
-| Oct 24, 2019 |  | ESOP | <a href="https://www.etaps.org/2020/esop"> 29th European Symposium on Programming</a> | Apr 25-30, 2020 | Dublin, Ireland | 
 | Oct 18, 2019 | | ISEC | <a href="https://isoft.acm.org/isec2020">13th Innovations in Software Engineering Conference</a> | Feb 27-29, 2020 | Jabalpour, M.P, India | 
 | Oct 14, 2019 |  | ICST | <a href="https://icst2020.info">13th International Conference on Software Testing, Verification, and Validation</a> | March 23-27, 2020 | Porto, Portugal | 
 | Oct 6, 2019 | Oct 1, 2019 | VMCAI | <a href="https://popl20.sigplan.org/home/VMCAI-2020">21st International Conference on Verification, Model Checking and Abstract Interpretation</a> | Jan 13-15, 2019 | New Orleans, Louisiana, USA | 
