--- a/2020.md
+++ b/2020.md
@@ -4,6 +4,7 @@
 | --- | --- | --- | --- | --- | --- | 
 | Jul 18, 2020 |  | PRDC | <a href="http://prdc.dependability.org/PRDC2020/">25th IEEE Pacific Rim International Symposium on Dependable Computing</a> | Dec 1-4, 2020 | Perth, Australia | 
 | Jul 17, 2020 | Jul 10, 2020 | SBMF | <a href="http://sbmf2020.ufop.br/">23rd Brazilian Symposium on Formal Methods</a> | Nov 25-27, 2020 | Ouro Preto, Brazil | 
+| Jul 6, 2020 | Jul 3, 2020 | APLAS | <a href="https://conf.researchr.org/home/aplas-2020/">18th Asian Symposium on Programming Languages and Systems</a> | Nov 29-Dec 3, 2020 | Fukuoka, Japan | 
 | Jul 4, 2020 |  | SETTA | <a href="http://lcs.ios.ac.cn/setta2020/">6th International Symposium on Dependable Software Engineering: Theories, Tools and Applications</a> | Nov 24-27, 2020 | Guangzhou, China | 
 | Jun 26, 2020 | Jun 22, 2020 | ICTAC | <a href="https://ictac2020.github.io">17th International Colloquium on Theoretical Aspects of Computing</a> | Nov 30-Dec 4, 2020 | Macau, China | 
 | Jun 22, 2020 | Jun 15, 2020 | IFM | <a href="https://ifm20.si.usi.ch/">16th International Conference on integrated Formal Methods</a> | Nov 16-20, 2020 | Lugano, Switzerland | 
@@ -45,7 +46,7 @@
 | Oct 24, 2019 |  | ESOP | <a href="https://www.etaps.org/2020/esop"> 29th European Symposium on Programming</a> | Apr 25-30, 2020 | Dublin, Ireland | 
 | Oct 18, 2019 | | ISEC | <a href="https://isoft.acm.org/isec2020">13th Innovations in Software Engineering Conference</a> | Feb 27-29, 2020 | Jabalpour, M.P, India | 
 | Oct 14, 2019 |  | ICST | <a href="https://icst2020.info">13th International Conference on Software Testing, Verification, and Validation</a> | March 23-27, 2020 | Porto, Portugal | 
-| Oct 6, 2019 | Oct 1, 2019 | VMCAI | <a href="https://popl20.sigplan.org/home/VMCAI-2020">21st International Conference on Verification, Model Checking and Abstract Interpretation</a> | Jan 13-15, 2019 | New Orleans, Louisiana, USA | 
+| Oct 6, 2019 | Oct 1, 2019 | VMCAI | <a href="https://popl20.sigplan.org/home/VMCAI-2020">21st International Conference on Verification, Model Checking and Abstract Interpretation</a> | Jan 13-15, 2020 | New Orleans, Louisiana, USA | 
 | Aug 23, 2019 |  | ICSE | <a href="http://conf.researchr.org/home/icse-2020">42nd International Conference on Software Engineering</a> | May 23-29, 2020 | Seoul, South Korea | 
 | Aug 16, 2019 | Aug 9, 2019 | ASPLOS | <a href="https://asplos-conference.org">25th International Conference on Architectural Support for  Programming Languages and Operating Systems</a> | Mar 16-20, 2020 | Lausanne, Switzerland | 
 | Aug 6, 2019 | Jul 31, 2019 | PPoPP | <a href="https://ppopp20.sigplan.org">25th ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming</a> | Feb 22-26, 2020 | San Diego, California, USA | 
@@ -58,7 +59,6 @@
 
 2019 TODOs
 
-| Jun 14, 2019 | Jun 11, 2019 | APLAS | <a href="https://conf.researchr.org/home/aplas-2019/">17th Asian Symposium on Programming Languages and Systems</a> | Dec 2-4, 2019 | Bali, Indonesia | 
 | Jun 2, 2019 | May 26, 2019 | AVOCS | <a href="http://avocs19.imag.fr/">19th International Workshop on Automated Verification of Critical Systems</a> | Sep 30-Oct 1, 2019 | Grenoble, France | 
 | Apr 24, 2019 | Apr 17, 2019 | SOSP | <a href="https://www.sigops.org/sosp/sosp19/">27th ACM Symposium on Operating Systems Principles</a> | Oct 7-9, 2019 | Huntsville, Canada | 
 | Apr 11, 2019 | Mar 28, 2019 | FM | <a href="http://formalmethods2019.inesctec.pt/">23rd International Symposium on Formal Methods</a> | Oct 7-11, 2019 | Porto, Portugal | 
