--- a/2021.md
+++ b/2021.md
@@ -7,7 +7,13 @@
 | Oct 15, 2020 |  | FASE | <a href="https://www.etaps.org/2021/fase">24th International Conference on Fundamental Approaches to Software Engineering</a> | Mar 27-Apr 1, 2021 | Luxembourg, Luxembourg | 
 | Oct 15, 2020 |  | FoSSaCS | <a href="https://www.etaps.org/2021/fossacs">24th International Conference on Foundations of Software Science and Computation Structures</a> | Mar 27-Apr 1, 2021 | Luxembourg, Luxembourg | 
 | Oct 15, 2020 |  | ESOP | <a href="https://www.etaps.org/2021/esop">30th European Symposium on Programming</a> | Mar 27-Apr 1, 2021 | Luxembourg, Luxembourg | 
+| Oct 12, 2020 | Oct 5, 2020 | ICST | <a href="https://icst2021.icmc.usp.br">14th International Conference on Software Testing, Verification, and Validation</a> | Apr 12-16, 2021 | virtual | 
+| Oct 9, 2020 | Oct 1, 2020  | EuroSys | <a href="https://2021.eurosys.org">16th European Conference on Computer Systems</a> | Apr 26-29, 2021 | Edinburgh, Scotland, UK | 
+| Oct 5, 2020 |  | VMCAI | <a href="https://popl21.sigplan.org/home/VMCAI-2021">22nd International Conference on Verification, Model Checking and Abstract Interpretation</a> | Jan 17-19, 2021 | Copenhagen, Denmark | 
+| Sep 20, 2020 | | ISEC | <a href="https://isoft.acm.org/isec2021">14th Innovations in Software Engineering Conference</a> | Feb 25-27, 2021 | Bhubaneswar, India | 
 | Aug 28, 2020 |  | ICSE | <a href="http://conf.researchr.org/home/icse-2021">43rd International Conference on Software Engineering</a> | May 23-29, 2021 | Madrid, Spain | 
+| Aug 21, 2020 | Aug 14, 2020 | ASPLOS | <a href="https://asplos-conference.org">26th International Conference on Architectural Support for  Programming Languages and Operating Systems</a> | Apr, 2021 | Detroit, Michigan, USA | 
+| Aug 13, 2020 | Aug 6, 2020 | PPoPP | <a href="https://ppopp21.sigplan.org">26th ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming</a> | Feb 27-Mar 3, 2021 | Seoul, South Korea | 
 | Jul 9, 2020 |  | POPL | <a href="https://popl21.sigplan.org">48th Annual ACM SIGPLAN - SIGACT Symposium on Principles of Programming Languages</a> | Jan 17-22, 2021 | Copenhagen, Denmark | 
 
 
@@ -18,6 +24,7 @@
 
 | Jul 18, 2020 |  | PRDC | <a href="http://prdc.dependability.org/PRDC2020/">25th IEEE Pacific Rim International Symposium on Dependable Computing</a> | Dec 1-4, 2020 | Perth, Australia | 
 | Jul 17, 2020 | Jul 10, 2020 | SBMF | <a href="http://sbmf2020.ufop.br/">23rd Brazilian Symposium on Formal Methods</a> | Nov 25-27, 2020 | Ouro Preto, Brazil | 
+| Jul 6, 2020 | Jul 3, 2020 | APLAS | <a href="https://conf.researchr.org/home/aplas-2020/">18th Asian Symposium on Programming Languages and Systems</a> | Nov 29-Dec 3, 2020 | Fukuoka, Japan | 
 | Jul 4, 2020 |  | SETTA | <a href="http://lcs.ios.ac.cn/setta2020/">6th International Symposium on Dependable Software Engineering: Theories, Tools and Applications</a> | Nov 24-27, 2020 | Guangzhou, China | 
 | Jun 26, 2020 | Jun 22, 2020 | ICTAC | <a href="https://ictac2020.github.io">17th International Colloquium on Theoretical Aspects of Computing</a> | Nov 30-Dec 4, 2020 | Macau, China | 
 | Jun 22, 2020 | Jun 15, 2020 | IFM | <a href="https://ifm20.si.usi.ch/">16th International Conference on integrated Formal Methods</a> | Nov 16-20, 2020 | Lugano, Switzerland | 
@@ -51,17 +58,10 @@
 | Dec 19, 2019 | Dec 12, 2019 | NFM | <a href="https://ti.arc.nasa.gov/events/nfm-2020">12th NASA Formal Methods Symposium</a> | May 11-15, 2020 | Moffett Field, California, USA | 
 | Dec 13, 2020 | Dec 3, 2019 | DSN | <a href="http://www.dsn.org">50th Annual IEEE/IFIP International Conference on Dependable Systems and Networks</a> | Jun 29-Jul 2, 2020 | Valencia, Spain | 
 | Nov 22, 2019 |  | PLDI | <a href="https://conf.researchr.org/home/pldi-2020">41st ACM SIGPLAN Conference on Programming Language Design and Implementation</a> | Jun 15-20, 2020 | London, United Kingdom | 
-| Nov 4, 2019 |  | EuroSys | <a href="https://www.eurosys2020.org">15th European Conference on Computer Systems</a> | Apr 27-30, 2020 | Heraklion, Crete, Greece | 
-| Oct 18, 2019 | | ISEC | <a href="https://isoft.acm.org/isec2020">13th Innovations in Software Engineering Conference</a> | Feb 27-29, 2020 | Jabalpour, M.P, India | 
-| Oct 14, 2019 |  | ICST | <a href="https://icst2020.info">13th International Conference on Software Testing, Verification, and Validation</a> | March 23-27, 2020 | Porto, Portugal | 
-| Oct 6, 2019 | Oct 1, 2019 | VMCAI | <a href="https://popl20.sigplan.org/home/VMCAI-2020">21st International Conference on Verification, Model Checking and Abstract Interpretation</a> | Jan 13-15, 2019 | New Orleans, Louisiana, USA | 
-| Aug 16, 2019 | Aug 9, 2019 | ASPLOS | <a href="https://asplos-conference.org">25th International Conference on Architectural Support for  Programming Languages and Operating Systems</a> | Mar 16-20, 2020 | Lausanne, Switzerland | 
-| Aug 6, 2019 | Jul 31, 2019 | PPoPP | <a href="https://ppopp20.sigplan.org">25th ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming</a> | Feb 22-26, 2020 | San Diego, California, USA | 
 
 
 2019 TODOs
 
-| Jun 14, 2019 | Jun 11, 2019 | APLAS | <a href="https://conf.researchr.org/home/aplas-2019/">17th Asian Symposium on Programming Languages and Systems</a> | Dec 2-4, 2019 | Bali, Indonesia | 
 | Jun 2, 2019 | May 26, 2019 | AVOCS | <a href="http://avocs19.imag.fr/">19th International Workshop on Automated Verification of Critical Systems</a> | Sep 30-Oct 1, 2019 | Grenoble, France | 
 | Apr 24, 2019 | Apr 17, 2019 | SOSP | <a href="https://www.sigops.org/sosp/sosp19/">27th ACM Symposium on Operating Systems Principles</a> | Oct 7-9, 2019 | Huntsville, Canada | 
 | Apr 11, 2019 | Mar 28, 2019 | FM | <a href="http://formalmethods2019.inesctec.pt/">23rd International Symposium on Formal Methods</a> | Oct 7-11, 2019 | Porto, Portugal | 
