--- a/2021.md
+++ b/2021.md
@@ -2,7 +2,13 @@
 
 | Paper Submission | Abstract Submission | Conference | Conference Homepage | When? | Where? | 
 | --- | --- | --- | --- | --- | --- | 
+| Feb 25, 2021 |  | FSE | <a href="https://2021.esec-fse.org">29th ACM SIGSOFT International Symposium on the Foundations of Software Engineering</a> | Aug 23-27, 2021 | Athens, Greece | 
+| Jan 29, 2021 |  | ISSTA | <a href="https://conf.researchr.org/home/issta-2021">30th ACM SIGSOFT International Symposium on Software Testing and Analysis</a> | Jul 12-16, 2021 | Aarhus, Denmark | 
+| Jan 25, 2021 | Jan 20, 2021 | LICS | <a href="http://easyconferences.eu/lics2021/">36th Annual IEEE Symposium on Logic in Computer Science</a> | Jun 29-Jul 2, 2021 | Rome, Italy | 
 | Jan 11, 2021 |  | ECOOP | <a href="https://2021.ecoop.org">35th European Conference on Object-Oriented Programming</a> | Jul 12-16, 2021 | Aarhus, Denmark | 
+| Dec 11, 2020 | Dec 4, 2020 | DSN | <a href="http://www.dsn.org">51st Annual IEEE/IFIP International Conference on Dependable Systems and Networks</a> | Jun 21-24, 2021 | Taipei, Taiwan | 
+| Dec 4, 2020 | Nov 27, 2020 | NFM | <a href="https://shemesh.larc.nasa.gov/nfm2021/">13th NASA Formal Methods Symposium</a> | May 24-28, 2021 | Norfolk, Virginia, USA | 
+| Nov 20, 2020 |  | PLDI | <a href="https://conf.researchr.org/home/pldi-2021">42nd ACM SIGPLAN Conference on Programming Language Design and Implementation</a> | Jun 20-25, 2021 | Virtual Conference | 
 |  |  | ETAPS | <a href="http://www.etaps.org">The European Joint Conferences on Theory and Practice of Software</a> | Mar 27-Apr 1, 2021 | Luxembourg, Luxembourg | 
 | Oct 15, 2020 | | TACAS | <a href="https://www.etaps.org/2021/tacas">27th International Conference on Tools and Algorithms for the Construction and Analysis of Systems</a> | Mar 27-Apr 1, 2021 | Luxembourg, Luxembourg | 
 | Oct 15, 2020 |  | FASE | <a href="https://www.etaps.org/2021/fase">24th International Conference on Fundamental Approaches to Software Engineering</a> | Mar 27-Apr 1, 2021 | Luxembourg, Luxembourg | 
@@ -46,18 +52,12 @@
 | Apr 16, 2020 | Apr 9, 2020 | FMCAD | <a href="https://fmcad.forsyte.at/FMCAD20">20th International Conference on Formal Methods in Computer-Aided Design</a> | Sep 22 - 24, 2020 | Haifa, Israel | 
 | Apr 15, 2020 |  | SPLASH | <a href="https://2020.splashcon.org">11th ACM SIGPLAN conference on Systems, Programming, Languages, and Applications: Software for Humanity</a> | Nov 15-20, 2020 | Chicago, Illinois, USA | 
 | Apr 10, 2020 | Apr 3, 2020 | EMSOFT | <a href="https://www.esweek.org/emsoft/about">International Conference on Embedded Software</a> | Oct 11-16, 2020 | Shanghai, China | 
-| Mar 5, 2020 |  | FSE | <a href="https://2020.esec-fse.org">28th ACM SIGSOFT International Symposium on the Foundations of Software Engineering</a> | Nov 8-13, 2020 | Sacramento, California, USA | 
 | Feb 15, 2020 |  | LPAR | <a href="https://easychair.org/smart-program/LPAR-23">23rd International Conference on Logic for Programming, Artificial Intelligence and Reasoning</a> | May 22-27, 2020 | Alicante, Spain | 
 | Jan 31, 2020 | Jan 24, 2020 | ICS | <a href="https://ics2020.bsc.es">34th ACM International Conference on Supercomputing</a> | Jun 29-Jul 2, 2020 | Barcelona, Spain | 
-| Jan 27, 2020 |  | ISSTA | <a href="https://conf.researchr.org/home/issta-2020">29th ACM SIGSOFT International Symposium on Software Testing and Analysis</a> | Jul 18-22, 2020 | Los Angeles, California, USA | 
 | Jan 23, 2020 |  | CAV | <a href="http://i-cav.org/2020/">32nd International Conference on Computer Aided Verification</a> | Jul 19-24, 2020 | Los Angeles, California, USA | 
 | Jan 23, 2020 | Jan 16, 2020 | IJCAR | <a href="https://ijcar2020.org">10th International Joint Conference on Automated Reasoning</a> | Jun 29-Jul 5, 2020 | Paris, France | 
 | Jan 22, 2020 | Jan 15, 2020 | TAP | <a href="https://tap.sosy-lab.org/2020">14th International Conference on Tests and Proofs</a> | Jun 22-26, 2020 | Bergen, Norway | 
 | Jan 12, 2020 | Jan 5, 2020 | TASE | <a href="http://www.se.gxnu.edu.cn/tase2019">14th International Symposium on Theoretical Aspects of Software Engineering</a> | Jul 15-17, 2020 | Hangzhou, China | 
-| Jan 10, 2020 | Jan 6, 2020 | LICS | <a href="https://lics.siglog.org/lics20">35th Annual IEEE Symposium on Logic in Computer Science</a> | Jul 8-12, 2020 | Beijing, China | 
-| Dec 19, 2019 | Dec 12, 2019 | NFM | <a href="https://ti.arc.nasa.gov/events/nfm-2020">12th NASA Formal Methods Symposium</a> | May 11-15, 2020 | Moffett Field, California, USA | 
-| Dec 13, 2020 | Dec 3, 2019 | DSN | <a href="http://www.dsn.org">50th Annual IEEE/IFIP International Conference on Dependable Systems and Networks</a> | Jun 29-Jul 2, 2020 | Valencia, Spain | 
-| Nov 22, 2019 |  | PLDI | <a href="https://conf.researchr.org/home/pldi-2020">41st ACM SIGPLAN Conference on Programming Language Design and Implementation</a> | Jun 15-20, 2020 | London, United Kingdom | 
 
 
 2019 TODOs
