--- a/2021.md
+++ b/2021.md
@@ -2,8 +2,19 @@
 
 | Paper Submission | Abstract Submission | Conference | Conference Homepage | When? | Where? | 
 | --- | --- | --- | --- | --- | --- | 
+| May 7, 2021 | Apr 30, 2021 | SOSP | <a href="https://sosp2021.mpi-sws.org/">28th ACM Symposium on Operating Systems Principles</a> | Oct 25-28, 2021 | Koblenz, Germany | 
+| May 6, 2021 | Apr 30, 2021 | FM | <a href="http://formalmethods2021.csp.escience.cn/">24th International Symposium on Formal Methods</a> | Nov 20-26, 2021 | Beijing, China | 
+| Apr 23, 2021 | Apr 16, 2021 | ASE | <a href="https://conf.researchr.org/home/ase-2021">36th IEEE/ACM International Conference on Automated Software Engineering</a> | Nov 15-19, 2021 | Melbourne, Australia | 
+| Apr 16, 2021 |  | SPLASH | <a href="https://2021.splashcon.org">12th ACM SIGPLAN conference on Systems, Programming, Languages, and Applications: Software for Humanity</a> | Oct 17-22, 2021 | Chicago, Illinois, USA | 
+| Apr 9, 2021 | Apr 2, 2021 | EMSOFT | <a href="https://esweek.org/emsoft/">International Conference on Embedded Software</a> | Oct 10-15, 2021 | virtual | 
+| Mar 7, 2021 | Feb 28, 2021 | TASE | <a href="https://tase2021.github.io/">15th International Symposium on Theoretical Aspects of Software Engineering</a> | Aug 25-27, 2021 | Shanghai, China | 
+| Mar 1, 2021 |  | SPIN | <a href="https://conf.researchr.org/home/spin-2021">27th International SPIN Symposium on Model Checking Software</a> | Jul 14-15, 2021 | Aarhus, Denmark | 
 | Feb 25, 2021 |  | FSE | <a href="https://2021.esec-fse.org">29th ACM SIGSOFT International Symposium on the Foundations of Software Engineering</a> | Aug 23-27, 2021 | Athens, Greece | 
+| Feb 22, 2021 | Feb 15, 2021 | CADE | <a href="https://www.cs.cmu.edu/~mheule/CADE28/">28th International Conference on Automated Deduction</a> | Jul 11-16, 2021 | virtual | 
+| Feb 4, 2021 | Jan 28, 2021 | ICS | <a href="https://ics21.github.io/">35th ACM International Conference on Supercomputing</a> | Jun 15-17, 2021 | virtual | 
+| Jan 31, 2021 |  | TAP | <a href="https://www.univ-orleans.fr/lifo/events/TAP2021/">15th International Conference on Tests and Proofs</a> | Jun 21-25, 2021 | Bergen, Norway | 
 | Jan 29, 2021 |  | ISSTA | <a href="https://conf.researchr.org/home/issta-2021">30th ACM SIGSOFT International Symposium on Software Testing and Analysis</a> | Jul 12-16, 2021 | Aarhus, Denmark | 
+| Jan 28, 2021 |  | CAV | <a href="http://i-cav.org/2021/">33rd International Conference on Computer Aided Verification</a> | Jul 18-23, 2021 | Los Angeles, California, USA | 
 | Jan 25, 2021 | Jan 20, 2021 | LICS | <a href="http://easyconferences.eu/lics2021/">36th Annual IEEE Symposium on Logic in Computer Science</a> | Jun 29-Jul 2, 2021 | Rome, Italy | 
 | Jan 11, 2021 |  | ECOOP | <a href="https://2021.ecoop.org">35th European Conference on Object-Oriented Programming</a> | Jul 12-16, 2021 | Aarhus, Denmark | 
 | Dec 11, 2020 | Dec 4, 2020 | DSN | <a href="http://www.dsn.org">51st Annual IEEE/IFIP International Conference on Dependable Systems and Networks</a> | Jun 21-24, 2021 | Taipei, Taiwan | 
@@ -47,25 +58,14 @@
 | Apr 24, 2020 | Apr 22, 2020 | SAS | <a href="https://conf.researchr.org/home/sas-2020">27th International Static Analysis Symposium</a> | Nov 18-20, 2020 | Chicago, Illinois, USA | 
 | Apr 22, 2020 | Apr 15, 2020 | CONCUR | <a href="https://concur2020.forsyte.at">31st International Conference on Concurrency Theory</a> | Sep 1-4, 2020 | Vienna, Austria | 
 | Apr 20, 2020 | Apr 14, 2020 | VSTTE | <a href="https://sri-csl.github.io/VSTTE20">12th Working Conference on Verified Software: Theories, Tools, and Experiments</a> | Jul 19-20, 2020 | Los Angeles, California, USA | 
-| Apr 17, 2020 |  | SPIN | <a href="https://spin2020ui.web.illinois.edu">27th International SPIN Symposium on Model Checking Software</a> | Jul 24-25, 2020 | Chicago, Illinois, USA | 
-| Apr 17, 2020 | Apr 10, 2020 | ASE | <a href="https://a2i2.github.io/ase2020">35th IEEE/ACM International Conference on Automated Software Engineering</a> | Sep 21-25, 2020 | Melbourne, Australia | 
 | Apr 16, 2020 | Apr 9, 2020 | FMCAD | <a href="https://fmcad.forsyte.at/FMCAD20">20th International Conference on Formal Methods in Computer-Aided Design</a> | Sep 22 - 24, 2020 | Haifa, Israel | 
-| Apr 15, 2020 |  | SPLASH | <a href="https://2020.splashcon.org">11th ACM SIGPLAN conference on Systems, Programming, Languages, and Applications: Software for Humanity</a> | Nov 15-20, 2020 | Chicago, Illinois, USA | 
-| Apr 10, 2020 | Apr 3, 2020 | EMSOFT | <a href="https://www.esweek.org/emsoft/about">International Conference on Embedded Software</a> | Oct 11-16, 2020 | Shanghai, China | 
 | Feb 15, 2020 |  | LPAR | <a href="https://easychair.org/smart-program/LPAR-23">23rd International Conference on Logic for Programming, Artificial Intelligence and Reasoning</a> | May 22-27, 2020 | Alicante, Spain | 
-| Jan 31, 2020 | Jan 24, 2020 | ICS | <a href="https://ics2020.bsc.es">34th ACM International Conference on Supercomputing</a> | Jun 29-Jul 2, 2020 | Barcelona, Spain | 
-| Jan 23, 2020 |  | CAV | <a href="http://i-cav.org/2020/">32nd International Conference on Computer Aided Verification</a> | Jul 19-24, 2020 | Los Angeles, California, USA | 
 | Jan 23, 2020 | Jan 16, 2020 | IJCAR | <a href="https://ijcar2020.org">10th International Joint Conference on Automated Reasoning</a> | Jun 29-Jul 5, 2020 | Paris, France | 
-| Jan 22, 2020 | Jan 15, 2020 | TAP | <a href="https://tap.sosy-lab.org/2020">14th International Conference on Tests and Proofs</a> | Jun 22-26, 2020 | Bergen, Norway | 
-| Jan 12, 2020 | Jan 5, 2020 | TASE | <a href="http://www.se.gxnu.edu.cn/tase2019">14th International Symposium on Theoretical Aspects of Software Engineering</a> | Jul 15-17, 2020 | Hangzhou, China | 
 
 
 2019 TODOs
 
 | Jun 2, 2019 | May 26, 2019 | AVOCS | <a href="http://avocs19.imag.fr/">19th International Workshop on Automated Verification of Critical Systems</a> | Sep 30-Oct 1, 2019 | Grenoble, France | 
-| Apr 24, 2019 | Apr 17, 2019 | SOSP | <a href="https://www.sigops.org/sosp/sosp19/">27th ACM Symposium on Operating Systems Principles</a> | Oct 7-9, 2019 | Huntsville, Canada | 
-| Apr 11, 2019 | Mar 28, 2019 | FM | <a href="http://formalmethods2019.inesctec.pt/">23rd International Symposium on Formal Methods</a> | Oct 7-11, 2019 | Porto, Portugal | 
-| Feb 22, 2019 | Feb 15, 2019 | CADE | <a href="http://cade-27.info/">27th International Conference on Automated Deduction</a> | Aug 27-30, 2019 | Natal, Brazil | 
 
 -->
 
